# crystalball

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  config.py  db.py  main.py  pyproject.toml
backend-rs/: Cargo.toml  README.md
backend-rs/src/: main.rs  storage.rs
backend/providers/: __init__.py  alpaca.py  base.py  hoodlink.py  hoodwink.py
backend/routes/: account.py  ai.py  analytics.py  deps.py  market.py  news.py  orders.py  providers.py  reports.py  screener.py  settings.py  ws.py
backend/services/: bs.py  dex.py  gex.py  history_cache.py  market_report.py  oi.py  screener_cache.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: AssistantFab.tsx  Dashboard.tsx  SettingsModal.tsx  Sidebar.tsx  SplashScreen.tsx  TabBar.tsx  Topbar.tsx  WidgetWrapper.tsx
frontend/src/components/ui/: AppColorPicker.tsx  AppDropdown.tsx
frontend/src/components/widgets/: AIAssistantWidget.tsx  BloombergTVWidget.tsx  ChartWidget.tsx  DEXWidget.tsx  GEXWidget.tsx  MarketReportWidget.tsx  NewsFeedWidget.tsx  OpenInterest3DWidget.tsx  OpenInterestWidget.tsx  OptionsLadderWidget.tsx  OptionsLightHistogram.tsx  OrderFlowWidget.tsx  ScreenerWidget.tsx  SymbolBar.tsx  WidgetSkeletons.tsx
frontend/src/lib/: api.ts
frontend/src/lib/hooks/: useWindowSize.ts
frontend/src/lib/store/: dashboardStore.ts
scripts/: start-backend.sh  start-frontend.sh  start-tunnel.sh
